tests/NormalTests/paczka1/fuzzy1/56272731.err
Error in line 10: A19 A217 13,9
Error in line 25: qCEf1MeB A19 42,96
